--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing breweries</h1>
 
+<p> Number of breweries: <%= @breweries.count %> </p>
+
 <table>
   <thead>
     <tr>
@@ -14,9 +16,8 @@
   <tbody>
     <% @breweries.each do |brewery| %>
       <tr>
-        <td><%= brewery.name %></td>
+        <td><%= link_to "#{brewery.name}", brewery %></td>
         <td><%= brewery.year %></td>
-        <td><%= link_to 'Show', brewery %></td>
         <td><%= link_to 'Edit', edit_brewery_path(brewery) %></td>
         <td><%= link_to 'Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
