--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,14 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @brewery.name %>
-</p>
+<h2><%= @brewery.name %></h2>
 
 <p>
-  <strong>Year:</strong>
-  <%= @brewery.year %>
+  <i>Established in <%= @brewery.year %></i>
 </p>
+
+<p>Beers: <%= @brewery.beers.count %> </p>
 
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
 <%= link_to 'Back', breweries_path %>
