--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -12,7 +12,15 @@
 
 <p>
   <strong>Brewery:</strong>
-  <%= @beer.brewery_id %>
+  <%= @beer.brewery.name %>
+</p>
+
+<p>
+  <% if @beer.ratings.empty? %>
+    Beer has not yet been rated!
+  <% else %>
+    Beer has <%= @beer.ratings.count %> ratings. Average: <%= @beer.average_rating.round(2) %>.
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_beer_path(@beer) %> |
