--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,4 +1,6 @@
-<h2>List of ratings</h2>
+<h2>Ratings</h2>
+
+<%= link_to 'Add new rating', ratings_new_path %>
 
 <p> Number of ratings: <%= @ratings.count %></p>
 
