--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,11 +1,11 @@
 <h2>Ratings</h2>
 
-<%= link_to 'Add new rating', ratings_new_path %>
+<%= link_to 'Add new rating', new_rating_path %>
 
 <p> Number of ratings: <%= @ratings.count %></p>
 
 <ul>
   <% @ratings.each do |rating| %>
-    <li> <%= rating %> </li>
+    <li> <%= rating %> <%= link_to 'delete', rating_path(rating.id), method: :delete, data: { confirm: 'Are you sure?' } %> </li>
   <% end %>
 </ul>
