--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
     <%= link_to 'ratings', ratings_path %>
   </div>
 
+  <% if not session[:user_id].nil? %>
+    <p><%= User.find(session[:user_id]).username %> signed in</p>
+  <% end %>
+
   <%= yield %>
 
 </body>
