--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,19 @@
     <%= link_to 'breweries', breweries_path %>
     <%= link_to 'beers', beers_path %>
     <%= link_to 'ratings', ratings_path %>
+    <%= link_to 'users', users_path %>
+    |
+    <% if not session[:user_id].nil? %>
+      <%= link_to current_user.username, current_user %>
+      <%= link_to 'rate_a_beer', new_rating_path %>
+      <%= link_to 'sign out', signout_path, method: :delete %>
+    <% else %>
+      <%= link_to 'sign in', signin_path %>
+      <%= link_to 'sign up', signup_path %>
+    <% end %>
   </div>
 
-  <% if not session[:user_id].nil? %>
-    <p><%= User.find(session[:user_id]).username %> signed in</p>
-  <% end %>
+
 
   <%= yield %>
 
