--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,12 @@
     <%= link_to 'beers', beers_path %>
     <%= link_to 'ratings', ratings_path %>
     <%= link_to 'users', users_path %>
+    <%= link_to 'beer clubs', beer_clubs_path %>
     |
     <% if not session[:user_id].nil? %>
       <%= link_to current_user.username, current_user %>
-      <%= link_to 'rate_a_beer', new_rating_path %>
+      <%= link_to 'rate a beer', new_rating_path %>
+      <%= link_to 'join a club', new_membership_path %>
       <%= link_to 'sign out', signout_path, method: :delete %>
     <% else %>
       <%= link_to 'sign in', signin_path %>
