--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,19 +2,28 @@
 
 <h1><%= @user.username %></h1>
 
-<p>
-  <% if @user.ratings.empty? %>
-    No ratings.
-  <% else %>
-    <%= pluralize(@user.ratings.count, 'rating') %>. Average <%= @user.average_rating.round(2) %>.
-    <h2>Ratings</h2>
-    <ul>
-      <% @user.ratings.each do |r| %>
-        <li><%= r %> <%= link_to 'delete', rating_path(r.id), method: :delete, data: { confirm: 'Are you sure?' } %></li>
-      <% end %>
-    </ul>
-  <% end %>
-</p>
+<h2>Ratings</h2>
+<% if @user.ratings.any? %>
+  <%= pluralize(@user.ratings.count, 'rating') %>. Average <%= @user.average_rating.round(2) %>.
+  <ul>
+    <% @user.ratings.each do |r| %>
+      <li><%= r %> <%= link_to 'delete', r, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>No ratings.</p>
+<% end %>
+
+<h2>Club memberships</h2>
+<% if @user.memberships.any? %>
+  <ul>
+    <% @user.memberships.each do |m| %>
+      <li><%= link_to m.beer_club, m.beer_club %> <%= link_to 'delete', m, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>No club memberships.</p>
+<% end %>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
