--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= link_to 'users', users_path %>
     <%= link_to 'beer clubs', beer_clubs_path %>
     |
-    <% if not session[:user_id].nil? %>
+    <% if current_user != nil %>
       <%= link_to current_user.username, current_user %>
       <%= link_to 'rate a beer', new_rating_path %>
       <%= link_to 'join a club', new_membership_path %>
@@ -25,8 +25,6 @@
       <%= link_to 'sign up', signup_path %>
     <% end %>
   </div>
-
-
 
   <%= yield %>
 
