--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= link_to 'beers', beers_path %>
     <%= link_to 'ratings', ratings_path %>
     <%= link_to 'users', users_path %>
-    <%= link_to 'beer clubs', beer_clubs_path %>
+    <%= link_to 'clubs', beer_clubs_path %>
     |
     <% if current_user != nil %>
       <%= link_to current_user.username, current_user %>
