--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
       </li>
     <% end %>
   </ul>
+  <p>Favorite style: <%= @user.favorite_style %></p>
 <% else %>
   <p>No ratings.</p>
 <% end %>
