--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,7 @@
     <% end %>
   </ul>
   <p>Favorite style: <%= @user.favorite_style %></p>
+  <p>Favorite brewery: <%= @user.favorite_brewery.name %></p>
 <% else %>
   <p>No ratings.</p>
 <% end %>
