--- a/app/views/beer_clubs/index.html.erb
+++ b/app/views/beer_clubs/index.html.erb
@@ -18,8 +18,8 @@
         <td><%= link_to beer_club.name, beer_club %></td>
         <td><%= beer_club.founded %></td>
         <td><%= beer_club.city %></td>
-        <td><%= link_to 'Edit', edit_beer_club_path(beer_club) %></td>
-        <td><%= link_to 'Delete', beer_club, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to('Edit', edit_beer_club_path(beer_club)) if current_user%></td>
+        <td><%= link_to('Delete', beer_club, method: :delete, data: { confirm: 'Are you sure?' }) if current_user %></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Beer club', new_beer_club_path %>
+<%= link_to('New Beer club', new_beer_club_path) if current_user %>
