--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= beer.style %></td>
         <td><%= link_to beer.brewery.name, beer.brewery %></td>
         <td><%= link_to('Edit', edit_beer_path(beer)) if current_user %></td>
-        <td><%= link_to('Delete', beer, method: :delete, data: { confirm: 'Are you sure?' }) if current_user %></td>
+        <td><%= link_to('Delete', beer, method: :delete, data: { confirm: 'Are you sure?' }) if current_user and current_user.admin %></td>
       </tr>
     <% end %>
   </tbody>
