--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -17,7 +17,11 @@
     <% @places.each do |place| %>
       <tr>
         <% Place.rendered_fields.each do |f| %>
-          <td><%= place.send(f) %></td>
+          <% if f == :name %>
+            <td><%= link_to place.send(f), place_path(place.id) %></td>
+          <% else %>
+            <td><%= place.send(f) %></td>
+          <% end%>
         <% end %>
       </tr>
     <% end %>
