--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -27,5 +27,10 @@
 <% end %>
 
 
+<%= form_for(@membership) do |f| %>
+  <%= f.hidden_field :beer_club_id %>
+  <%= f.submit value:"join the club" %>
+<% end %>
+
 <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
 <%= link_to 'Back', beer_clubs_path %>
