--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -23,5 +23,17 @@
   <% end %>
 </p>
 
+<% if current_user %>
+
+  <h4>give a rating:</h4>
+
+  <%= form_for(@rating) do |f| %>
+    <%= f.hidden_field :beer_id %>
+    score: <%= f.number_field :score %>
+    <%= f.submit %>
+  <% end %>
+
+<% end %>
+
 <%= link_to 'Edit', edit_beer_path(@beer) %> |
 <%= link_to 'Back', beers_path %>
