--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -26,10 +26,11 @@
   <p>Club has no members.</p>
 <% end %>
 
-
-<%= form_for(@membership) do |f| %>
-  <%= f.hidden_field :beer_club_id %>
-  <%= f.submit value:"join the club" %>
+<% if current_user and not @beer_club.members.include? current_user %>
+  <%= form_for(@membership) do |f| %>
+    <%= f.hidden_field :beer_club_id %>
+    <%= f.submit value:"Join the club" %>
+  <% end %>
 <% end %>
 
 <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
