--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -16,12 +16,12 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :style %><br>
-    <%= f.select :style, options_for_select(@styles) %>
+    <%= f.label :style_id %><br>
+    <%= f.select :style_id, options_from_collection_for_select(@styles, :id, :name, @beer.style_id) %>
   </div>
   <div class="field">
     <%= f.label :brewery_id %><br>
-    <%= f.select :brewery_id, options_from_collection_for_select(@breweries, :id, :name) %>
+    <%= f.select :brewery_id, options_from_collection_for_select(@breweries, :id, :name, @beer.brewery_id) %>
   </div>
   <div class="actions">
     <%= f.submit %>
