--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -5,11 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Year</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= link_to 'Name', breweries_path(order:"name") %></th>
+      <th><%= link_to 'Year', breweries_path(order:"year") %></th>
     </tr>
   </thead>
 
