--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,6 +1,8 @@
-<h1>Listing beers</h1>
+<h1>Beers</h1>
 
-<table>
+<p> Number of beers: <%= @beers.count %> </p>
+
+<table class="table table-hover">
   <thead>
     <tr>
       <th> <%= link_to 'Name', beers_path(order:"name") %> </th>
@@ -13,7 +15,7 @@
     <% @beers.each do |beer| %>
       <tr>
         <td><%= link_to beer.name, beer %></td>
-        <td><%= beer.style.name %></td>
+        <td><%= link_to beer.style.name, beer.style %></td>
         <td><%= link_to beer.brewery.name, beer.brewery %></td>
         <td><%= link_to('Edit', edit_beer_path(beer)) if current_user %></td>
         <td><%= link_to('Delete', beer, method: :delete, data: { confirm: 'Are you sure?' }) if current_user and current_user.admin %></td>
