--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Styles</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
+      <th>Beers</th>
     </tr>
   </thead>
 
@@ -11,6 +12,7 @@
     <% @styles.each do |style| %>
       <tr>
         <td><%= link_to style.name, style %></td>
+        <td><%= style.beers.length %></td>
       </tr>
     <% end %>
   </tbody>
