--- a/app/views/beer_clubs/index.html.erb
+++ b/app/views/beer_clubs/index.html.erb
@@ -1,14 +1,11 @@
 <h1>Beer clubs</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
       <th>Founded</th>
       <th>City</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
