--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,8 +1,8 @@
-<h1>Listing breweries</h1>
+<h1>Breweries</h1>
 
 <p> Number of breweries: <%= @breweries.count %> </p>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th><%= link_to 'Name', breweries_path(order:"name") %></th>
