--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,18 @@
 <h1>Users</h1>
 
-<table>
+<table class="table table-hover">
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Ratings</th>
+  </tr>
+  </thead>
+
   <tbody>
     <% @users.each do |user| %>
       <tr>
         <td><%= link_to user.username, user %></td>
+        <td><%= user.ratings.length %></td>
       </tr>
     <% end %>
   </tbody>
