--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -17,8 +17,8 @@
         <td><%= link_to beer.name, beer %></td>
         <td><%= link_to beer.style.name, beer.style %></td>
         <td><%= link_to beer.brewery.name, beer.brewery %></td>
-        <td><%= link_to('Edit', edit_beer_path(beer)) if current_user %></td>
-        <td><%= link_to('Delete', beer, method: :delete, data: { confirm: 'Are you sure?' }) if current_user and current_user.admin %></td>
+        <td><%= link_to('Edit', edit_beer_path(beer), class:'btn btn-default btn-xs') if current_user %></td>
+        <td><%= link_to('Delete', beer, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default btn-xs') if current_user and current_user.admin %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to('New Beer', new_beer_path) if current_user %>
+<%= link_to('New Beer', new_beer_path, class:'btn btn-default btn-sm') if current_user %>
