--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,9 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @beer.name %>
-</p>
+<h1><%= @beer.name %></h1>
 
 <p>
   <strong>Style:</strong>
