--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -14,6 +14,9 @@
   <% end %>
 
   <%= f.select :beer_id, options_from_collection_for_select(@beers, :id, :to_s, selected: @rating.beer_id) %>
-  score: <%= f.number_field :score %>
-  <%= f.submit %>
+
+  score:
+  <%= f.number_field :score %>
+
+  <%= f.submit class:"btn btn-primary" %>
 <% end %>
