--- a/app/views/beer_clubs/index.html.erb
+++ b/app/views/beer_clubs/index.html.erb
@@ -15,8 +15,8 @@
         <td><%= link_to beer_club.name, beer_club %></td>
         <td><%= beer_club.founded %></td>
         <td><%= beer_club.city %></td>
-        <td><%= link_to('Edit', edit_beer_club_path(beer_club)) if current_user %></td>
-        <td><%= link_to('Delete', beer_club, method: :delete, data: { confirm: 'Are you sure?' }) if current_user and current_user.admin %></td>
+        <td><%= link_to('Edit', edit_beer_club_path(beer_club), class:'btn btn-default btn-xs') if current_user %></td>
+        <td><%= link_to('Delete', beer_club, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default btn-xs') if current_user and current_user.admin %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to('New Beer club', new_beer_club_path) if current_user %>
+<%= link_to('New Beer club', new_beer_club_path, class:'btn btn-default btn-sm') if current_user %>
