--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1><%= @user.username %></h1>
 
 <h2>Ratings</h2>
@@ -41,7 +39,6 @@
 <% end %>
 
 <% if @user == current_user %>
-  <%= link_to 'Change password', edit_user_path(@user) %> |
-  <%= link_to 'Delete user account', @user, method: :delete, data: { confirm: 'Are you sure?' } %> |
+  <%= link_to 'Change password', edit_user_path(@user), class:'btn btn-default btn-sm'  %>
+  <%= link_to 'Delete user account', @user, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default btn-sm' %>
 <% end %>
-<%= link_to 'Back', users_path %>
