--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -7,10 +7,17 @@
 <li><%= link_to 'places', places_path %>
 <li>
 <% if current_user %>
-  <li><%= link_to current_user.username, current_user %>
-  <li><%= link_to 'rate a beer', new_rating_path %>
-  <li><%= link_to 'join a club', new_membership_path %>
-  <li><%= link_to 'sign out', signout_path, method: :delete %>
+  <li class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+      <%= current_user.username %> <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+      <li><%= link_to 'my page', current_user %>
+      <li><%= link_to 'rate a beer', new_rating_path %>
+      <li><%= link_to 'join a club', new_membership_path %>
+      <li><%= link_to 'sign out', signout_path, method: :delete %>
+    </ul>
+  </li>
 <% else %>
   <li><%= link_to 'sign in', signin_path %>
   <li><%= link_to 'sign up', signup_path %>
