Active/retired breweries.

--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,5 +1,9 @@
 
-<h2><%= @brewery.name %></h2>
+<h2><%= @brewery.name %>
+  <% if not @brewery.active  %>
+    <span class="label label-info">retired</span>
+  <% end %>
+</h2>
 
 <p>
   <i>Established in <%= @brewery.year %>.</i>
@@ -21,4 +25,4 @@
   <% end %>
 </p>
 
-<%= link_to 'Edit', edit_brewery_path(@brewery) %>
+<%= link_to 'Edit', edit_brewery_path(@brewery), class: "btn btn-default btn-sm" %>
