--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_tag places_path do %>
   city <%= text_field_tag :city, params[:city] %>
-  <%= submit_tag "Search" %>
+  <%= submit_tag "Search", class: "btn btn-default btn-sm" %>
 <% end %>
 
 <% if @places %>
