--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.select :brewery_id, options_from_collection_for_select(@breweries, :id, :name, @beer.brewery_id) %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-default btn-sm" %>
   </div>
 <% end %>
