--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -25,10 +25,11 @@
   <%= form_for(@rating) do |f| %>
     <%= f.hidden_field :beer_id %>
     score: <%= f.number_field :score %>
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-default btn-sm" %>
   <% end %>
 
 <% end %>
 
-<%= link_to 'Edit', edit_beer_path(@beer) %> |
-<%= link_to 'Back', beers_path %>
+<br>
+
+<%= link_to 'Edit', edit_beer_path(@beer), class: "btn btn-default btn-sm" %>
