--- a/app/views/breweries/_form.html.erb
+++ b/app/views/breweries/_form.html.erb
@@ -15,10 +15,17 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+
   <div class="field">
     <%= f.label :year %><br>
     <%= f.number_field :year %>
   </div>
+
+  <div class="field">
+    <%= f.label :active %>
+    <%= f.check_box :active %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
