--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,26 +1,16 @@
 <h1>Breweries</h1>
 
-<p> Number of breweries: <%= @breweries.count %> </p>
+<h2>Active</h2>
 
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th><%= link_to 'Name', breweries_path(order:"name") %></th>
-      <th><%= link_to 'Year', breweries_path(order:"year") %></th>
-    </tr>
-  </thead>
+<p> Number of active breweries: <%= @active_breweries.count %> </p>
 
-  <tbody>
-    <% @breweries.each do |brewery| %>
-      <tr>
-        <td><%= link_to brewery.name, brewery %></td>
-        <td><%= brewery.year %></td>
-        <td><%= link_to('Edit', edit_brewery_path(brewery), class:'btn btn-default btn-xs') if current_user %></td>
-        <td><%= link_to('Delete', brewery, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default btn-xs') if current_user and current_user.admin%></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render 'list', breweries: @active_breweries %>
+
+<h2>Retired</h2>
+
+<p> Number of retired breweries: <%= @retired_breweries.count %> </p>
+
+<%= render 'list', breweries: @retired_breweries %>
 
 <br>
 
