--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -18,5 +18,5 @@
   score:
   <%= f.number_field :score %>
 
-  <%= f.submit class:"btn btn-primary" %>
+  <%= f.submit class:"btn btn-default" %>
 <% end %>
