Edit/delete buttons in application helper.

--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -25,4 +25,4 @@
   <% end %>
 </p>
 
-<%= link_to 'Edit', edit_brewery_path(@brewery), class: "btn btn-default btn-sm" %>
+<%= edit_and_destroy_buttons(@brewery) %>
