--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -14,7 +14,7 @@
   <% if @beer.ratings.empty? %>
     Beer has not yet been rated!
   <% else %>
-    Beer has <%= pluralize(@beer.ratings.count, 'rating') %>. Average: <%= @beer.average_rating.round(2) %>.
+    Beer has <%= pluralize(@beer.ratings.count, 'rating') %>. Average: <%= round(@beer.average_rating) %>.
   <% end %>
 </p>
 
