--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -26,3 +26,5 @@
 </p>
 
 <%= edit_and_destroy_buttons(@brewery) %>
+
+<%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-default btn-sm" %>
