--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
   <tr>
     <th>Name</th>
+    <th>Rated beers</th>
     <th>Ratings</th>
   </tr>
   </thead>
@@ -12,6 +13,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= link_to user.username, user %></td>
+        <td><%= user.beers.length %></td>
         <td><%= user.ratings.length %></td>
       </tr>
     <% end %>
